<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Jeremy James on 6/16/20 10:35 AM
  ~  * Copyright (c) 2020 . All rights reserved.
  ~  * Last modified 5/18/20 1:14 PM
  ~  */
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".LoginFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress|text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="130dp"
            android:layout_height="56dp"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            app:cornerRadius="1000dp"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            app:cornerRadius="1000dp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/create_account"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_marginTop="16dp"
        android:layout_gravity="start|bottom"
        app:cornerRadius="1000dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/forgot_password"/>
</FrameLayout>